--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -2,9 +2,9 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$my-app-primary: mat-palette($mat-green, 900);
+$my-app-primary: mat-palette($mat-lime);
 $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
-$my-app-warn:    mat-palette($mat-deep-orange);
+$my-app-warn:    mat-palette($mat-indigo);
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 
 @include angular-material-theme($my-app-theme);
