--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -58,6 +58,7 @@
                     mat-raised-button>Log In    
             </button>
             <button color="primary" 
+                    type="button"
                     mat-raised-button 
                     [routerLink]="['/welcome']"
                     style="margin-left: 10px">Cancel
