--- a/src/app/movie/movie-list/movie-list.component.html
+++ b/src/app/movie/movie-list/movie-list.component.html
@@ -50,7 +50,6 @@
 
 </div>
 
-<div class="alert"
-       *ngIf='errorMessage'>
+<div class="alert" *ngIf='errorMessage'>
     Error: {{ errorMessage }}
 </div>
