--- a/src/app/movie/movie-detail/movie-detail.component.html
+++ b/src/app/movie/movie-detail/movie-detail.component.html
@@ -22,16 +22,7 @@
                               <span class="author">{{movie.director}}</span>
                               <h1 class="title"><a >{{movie.title}}</a></h1>
                               <p class="text">{{ movie.description }}</p>
-                               <button mat-raised-button 
-                                       color="warn"
-                                       [routerLink]="['/movies', movie.id, 'edit']">
-                                   Edit
-                                </button>
-                               <button mat-raised-button color="accent" 
-                                       style="margin-left: 5px;"
-                                       [routerLink]="['/movies', movie.id, 'editReactive']">
-                                Edit Reactive
-                               </button>
+                
                             </div>
                           </div>
                         </div>
@@ -42,8 +33,7 @@
             <div class="card-container" *ngIf="movie">
                 <h3> 
                   <p>
-                    {{movie.title}}
-                    
+                    {{movie.title}}      
                   </p>
                 </h3>
                  <hr>
@@ -87,13 +77,24 @@
                     <span class="param">Average DVD Price:</span> 
                       {{ movie.price | currency:'USD':'symbol' }}
                  </p>
-
                  <button mat-raised-button color="primary" 
-                            style="float: right"
-                            (click)="onBack()">
-                        <i class="fa fa-chevron-left"></i>
-                        Back
-                 </button>
+                 style="margin-right: 5px;"
+                 (click)="onBack()">
+                 <i class="fa fa-chevron-left"></i>
+                    Back
+               </button>
+               <button mat-raised-button 
+                       color="warn"
+                       [routerLink]="['/movies', movie.id, 'edit']">
+                   Edit
+                </button>
+               <button mat-raised-button color="accent" 
+                       style="margin-left: 5px;"
+                       [routerLink]="['/movies', movie.id, 'editReactive']">
+                Edit Reactive
+               </button>
+
+               
             </div>
         </div>
  </div>
