--- a/src/app/movie/movie-list/movie-list.component.scss
+++ b/src/app/movie/movie-list/movie-list.component.scss
@@ -10,12 +10,14 @@
   font-family: 'Montserrat', helvetica, arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
+  overflow-x: hidden; //for AOS animations
+  overflow-y: hidden;
 }
 
 .movie_card{
   position: relative;
   display: block;
-  width: 800px;
+  max-width: 800px;
   height: 350px;
   margin: 100px auto; 
   overflow: hidden;
@@ -108,6 +110,7 @@
 }
 
 @media screen and (min-width: 768px) {
+
   .movie_header{
     width: 60%;
   }
@@ -127,6 +130,7 @@
 }
 
 @media screen and (max-width: 768px) {
+
   .movie_card{
     width: 95%;
     margin: 70px auto; 
