--- a/src/app/movie/edit/movie-edit-info/movie-edit-info.component.html
+++ b/src/app/movie/edit/movie-edit-info/movie-edit-info.component.html
@@ -54,7 +54,7 @@
             <p>
              <label>Star Rating (1-5):</label>
              <input id="inputStarRating"
-                    type="number"
+                    type="string"
                     placeholder="Rating"
                     mhRange="1, 5"
                     [(ngModel)]="movie.starRating"
