fix minnor bugs

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -39,6 +39,7 @@
                      #passwordVar="ngModel"
                      [type]="hide ? 'text' : 'password'">
                      <button mat-icon-button matSuffix 
+                             type="button"
                              (click)="hide = !hide" 
                              [attr.aria-label]="'Hide password'" 
                              [attr.aria-pressed]="hide">  
