add comments and remove unused code

--- a/src/app/movie/edit/movie-edit-info/movie-edit-info.component.html
+++ b/src/app/movie/edit/movie-edit-info/movie-edit-info.component.html
@@ -71,7 +71,8 @@
                       placeholder="Description"
                       rows=3
                       [(ngModel)]="movie.description"
-                      name="description"></textarea>
+                      name="description">
+            </textarea>
 
         </p>
 
