--- a/src/app/movie/movie-list/movie-list.component.html
+++ b/src/app/movie/movie-list/movie-list.component.html
@@ -1,5 +1,5 @@
-<app-spinner [loading]="load"></app-spinner>
-    
+<!-- <app-spinner [loading]="load"></app-spinner> -->
+
 <div *ngIf="movies && movies.length" class="main">
 
    <!--  <form class="example">
@@ -17,10 +17,10 @@
               {{pageTitle}}
           </div>
       </div>
- 
-    </header>   
-  
-    
+
+    </header>
+
+
 
   <span *ngFor="let movie of filteredMovies; let i = index" >
               <div class="movie_card" id="bright" [attr.data-aos] = " i % 2 == 0 ? 'fade-right' : 'fade-left'">
@@ -34,17 +34,17 @@
                     <p class="mpaa">{{ movie.mpaa | uppercase }}</p>
                     <p class="type">{{ movie.price | currency:'USD':'symbol' }}</p>
                   </div>
-                   
+
                   <div class="movie_desc">
                     <p class="text">
-                            {{movie.description}} 
+                            {{movie.description}}
                             <app-star [rating]="movie.starRating"></app-star>
                             <span class="approvalRating">{{ movie.approvalRating | percent: '1.0-0'}}</span>
                     </p>
                   </div>
                   <div class="movie_social">
                      <button mat-raised-button color="warn" [routerLink]="['/movies', movie.id]">
-                       <i class="fas fa-info-circle"></i> 
+                       <i class="fas fa-info-circle"></i>
                         Details
                      </button>
                      <button mat-raised-button color="accent" style="margin-left:5px">
@@ -55,13 +55,13 @@
                             <i class="fas fa-edit"></i>
                             Edit
                      </button>
-                     
+
                   </div>
                 </div>
                 <div class="blur_back" [ngStyle]="{'background-image': 'url(' + movie.imageurl + ')'}"></div>
               </div>
-  </span>  
-    
+  </span>
+
 
 </div>
 
