--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,15 @@
+@import '~ngx-toastr/toastr';
+
 body {
     background: rgba(0, 0, 0, 0.9);
     margin: 0;
     color: #fff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
-  
+
 html, body { height: 100%; }
 
+.error {
+  color: red;
+  font-size: 12px;
+}
