--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,1 +1,87 @@
-<p>signup works!</p>
+<div class="camera-icon"><i class="fas fa-video fa-3x"></i></div>
+<mat-card-title>
+  REGISTER to <span class="title">MovieFinder</span>
+</mat-card-title>
+<mat-divider></mat-divider>
+<mat-card-content>
+  <form novalidate [formGroup]="registerForm" (ngSubmit)="onSubmit()" autocomplete="off">
+    <p>
+      <mat-form-field appearance="outline" color="warn">
+        <mat-label class="label">Username</mat-label>
+        <input type="string"
+               matInput
+               placeholder="choose a username"
+               formControlName="username" />
+               <mat-icon matSuffix><i class="fas fa-user"></i></mat-icon>
+               <mat-error class="error" *ngIf="form.username.invalid">
+                Please provide an <strong>username.</strong>
+               </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field appearance="outline" color="warn">
+        <mat-label class="label">Email Address</mat-label>
+        <input type="string"
+               matInput
+               placeholder="type your email"
+               formControlName="email" />
+               <mat-icon matSuffix><i class="fas fa-envelope"></i></mat-icon>
+               <mat-error class="error" *ngIf="form.email.hasError('required')">
+                Please provide an <strong>email.</strong>
+               </mat-error>
+               <mat-error class="error" *ngIf="form.email.hasError('pattern')">
+                Please provide a <strong>valid email address.</strong>
+               </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field appearance="outline" color="warn">
+        <mat-label class="label">Password</mat-label>
+        <input type="password"
+               matInput
+               placeholder="type your password"
+               formControlName="password"/>
+               <mat-icon matSuffix><i class="fas fa-key"></i></mat-icon>
+               <mat-error class="error" *ngIf="form.password.hasError('required')">
+                 Password is <strong>required.</strong>
+               </mat-error>
+               <mat-error class="error" *ngIf="form.password.hasError('minlength')">
+                Password must be at least <strong>8 characters.</strong>
+               </mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field appearance="outline" color="warn">
+        <mat-label class="label">Repeat Password</mat-label>
+        <input type="password"
+               matInput
+               placeholder="type your password"
+               formControlName="confirmPassword"/>
+               <mat-icon matSuffix><i class="fas fa-key"></i></mat-icon>
+               <mat-error class="error" *ngIf="form.confirmPassword.invalid">
+                 Passwords don't <strong>match.</strong>
+               </mat-error>
+      </mat-form-field>
+    </p>
+    <div class="terms">
+      <mat-checkbox formControlName="acceptTerms"></mat-checkbox>
+      I accept the
+      <span class="policy" (click)="openTermsDialog()">Terms of Service and Privacy Policy.</span>
+    </div>
+
+    <button [disabled]="loading || !registerForm.valid"
+            mat-raised-button
+            class="action-btn"
+            type="submit"
+            color="warn">
+            <i *ngIf="loading" class="fas fa-spinner fa-spin fa-lg fa-fw"></i>
+            Sign Up
+    </button>
+    <p>
+      <a [routerLink]="['/auth']">
+        <i class="fas fa-chevron-left icon"></i>Back to Login
+      </a>
+    </p>
+
+  </form >
+</mat-card-content>
